  Bugfixes:
    - Fixed that dungeons invisibly occupied some hexes just outside of themselves, preventing you from claiming them.
    - Fixed that hex cores did not correctly show whether the hexports were currently enabled.
    - Fixed crash on running the command /hextorio-debug when in remote view.
    - Fixed that updating the mod settings for planet-based trade productivity bonuses would not take effect without a restart.
    - Fixed floating point rounding errors around 0 for trade productivity.
    - Fixed that item-giving quests would not drop a remainder of a stack if the inventory is nearly full instead of only dropping entire stacks that wouldn't fit.
    - Fixed that hexports were off-center from the hex core.
    - Fixed that hexports were showing vulnerability to lightning strikes on Fulgora.
    - Fixed crash caused by other mods removing or restructuring title screen music.
    - Fixed that concrete was covering too much area over hexes, where it was being placed over water around the perimeter of the land.
  Gui:
    - Trade arrows display nonzero productivity without mousing over them.
    - Softened the white and cyan trade arrow sprites.
    - Removed the boxes around each trade, de-cluttering the hex core GUI and trade overview.
    - Moved the trade arrow's tooltip to a more obvious location that's below the trade, having the sprite of a productivity module.
    - Added button for pinging trades.
    - Improved trade overview layout.
    - Some trade overview filters that become irrelevant under certain conditions are now grayed out, e.g. "max output trades" slider grays out when "exact outputs match" is enabled.
  Optimizations:
    - Optimized dungeon turret reloading.
    - Optimized ahead-of-time chunk generation around players.
  Translation:
    - Added Polish translations.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 21/11/25
  Major Features: