@@ -565,6 +565,7 @@ command-examples=Examples:
 command-not-enough-params=That command requires at least __1__ __plural_for_parameter__1__{1=parameter|rest=parameters}__, but only __2__ __plural_for_parameter__2__{1=was|rest=were}__ provided.
 command-too-many-params=That command accepts at most __1__ __plural_for_parameter__1__{1=parameter|rest=parameters}__, but __2__ __plural_for_parameter__2__{1=was|rest=were}__ provided.
 command-wrong-type=Parameter __1__ has the wrong type. Expected __2__, got __3__.
+command-invalid-list-size=Parameter __1__ has an invalid list size. Expected size between __2__ and __3__, got __4__.
 command-invalid-surface=Invalid surface name. It either does not exist or it has not been generated/visited yet.
 command-cannot-modify-coin-value=Cannot modify the coin value of a coin item.
 command-invalid-item-value=Item values must be positive numbers.
